# rgame

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QUICKSTART.md  README.md  build.rs
examples/: advanced_game.rs  basic_window.rs  camera_flight.rs  ecs_demo.rs  settings.json  spinning_cube.rs  stress_test.rs
src/: audio.rs  config.rs  ecs.rs  engine.rs  input.rs  lib.rs  math.rs  renderer.rs  resource.rs  time.rs  utils.rs  window.rs
src/shaders/: default.wgsl
