[package]
name = "my_engine"  # Change this to a unique name on crates.io
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular Rust game engine library with Vulkan backend via wgpu"
readme = "README.md"
homepage = "https://github.com/yourusername/my_engine"
repository = "https://github.com/yourusername/my_engine"
license = "MIT"
keywords = ["gamedev", "game-engine", "wgpu", "ecs", "vulkan"]
categories = ["game-engines", "graphics", "rendering"]
exclude = [
    ".gitignore",
    "examples/**",
    "test_game/**",
]

[lib]
crate-type = ["rlib"]

[dependencies]
wgpu = "0.20"
winit = "0.29"
rodio = "0.18"
glam = { version = "0.27", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
pollster = "0.3"
bytemuck = { version = "1.14", features = ["derive"] }
image = "0.25"

[dev-dependencies]
# Dependencies for examples
